# data_mission_one

./: .env  README.md  main.py  pyproject.toml  raw_data.json  requirements.txt
src/backend/: api.py  data.py
src/database/: db.py
src/utils/: control_classes.py
